propertee-core/src/test/resources/tests/61_duplicate_auto_key.expected
Runtime error: Runtime Error at line 8:13: Auto-generated key '#1' conflicts with an explicit key in multi block
